[package]
name = "web-jingzi"
version = "0.4.0"
authors = ["vinoca <vinoca@vinoca.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.75"
async-io = "1.6.0"
async-dup = "1.2.2"
async-executor = "1.6.0"
async-h1 = "2.3.4"
async-lock = "3.0.0"
async-native-tls = { version = "0.5.0", features = [ "vendored" ] }
async-net = "1.8.0"
futures-lite = "2.0.0"
http-types = "2.12.0"
once_cell = "1.18.0"
regex = "1.10.2"
time = "0.2.27"
toml = "0.8.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

socks5 = { package = "socks5-client", git = "https://github.com/vincascm/socks5.git" }

[dependencies.uuid]
version = "1.5.0"
features = ["v4"]

[dependencies.serde]
version = "1.0.190"
features = ["derive"]

[dependencies.async-compression]
version = "0.4.4"
features = ["brotli", "deflate", "gzip", "futures-io"]
