[package]
name = "web-jingzi"
version = "0.4.2"
authors = ["vinoca <vinoca@vinoca.org>"]
edition = "2021"

[dependencies]
anyhow = "1.0.88"
async-io = "2.3.4"
async-dup = "1.2.4"
async-executor = "1.13.1"
async-h1 = "2.3.4"
async-lock = "3.4.0"
async-native-tls = { version = "0.5.0", features = [ "vendored" ] }
async-net = "2.0.0"
futures-lite = "2.3.0"
http-types = "2.12.0"
regex = "1.10.6"
time = "0.2.27"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.11.5"
redb = "2.1.2"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.async-compression]
version = "0.4.12"
features = ["brotli", "deflate", "gzip", "futures-io"]
